--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -22,6 +24,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -37,9 +40,15 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.10.3'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.10.3'
     implementation 'com.github.pedrovgs:draggablepanel:1.9'
-    implementation 'com.github.HaarigerHarald:android-youtubeExtractor:v1.7.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
+    implementation 'com.etebarian:meow-bottom-navigation:1.0.0'
+    implementation 'junit:junit:4.13-beta-3'
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.41"
 
+}
+repositories {
+    mavenCentral()
 }
