--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:windowSoftInputMode="stateHidden|adjustResize"
         android:theme="@style/AppTheme">
         <receiver android:name=".Receivers.NetworkChangeReceiver">
             <intent-filter>
@@ -27,7 +28,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize|uiMode"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"
                     />
